--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
   },
   "dependencies": {
     "@types/node": "18.15.11",
-    "@types/react": "18.0.37",
-    "@types/react-dom": "18.0.11",
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.5.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
-    "next": "^13.3.1-canary.4",
+    "next": "^13.4.9",
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@savvywombat/tailwindcss-grid-areas": "^3.0.1"
