--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@savvywombat/tailwindcss-grid-areas": "^3.0.1"
